@@ -16,7 +16,7 @@
 #along with this program; if not, write to the Free Software
 #Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-require_once('Smarty.class.php');
+require_once(dirname(dirname(__FILE__)).'/smarty/Smarty.class.php');
 
 class Smarty_Preview extends Smarty {
 
